Fix subsection spacing, inverse card link color, & mega hero content width

--- a/src/stories/Organisms/Section/Section.css
+++ b/src/stories/Organisms/Section/Section.css
@@ -5,15 +5,15 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-block: var(--s3);
-}
-
-.section:first-child {
   margin-block-start: var(--s3);
 }
 
-.section .section {
-  margin-block: 0;
+.section:last-child {
+  margin-block-end: var(--s3);
+}
+
+.section .section:first-child {
+  margin-block-start: 0;
 }
 
 .section > * {
@@ -338,24 +338,6 @@
 
 .section > .section__content.box .section__main > .section__content.box {
   padding-inline: 0;
-}
-
-/* Remove extra top spacing for cards subsection when 1st or 2nd element */
-.section .section__main .section.cards:nth-child(1) .section__content,
-.section .section__main .section.cards:nth-child(2) .section__content {
-  padding-block-start: unset;
-}
-
-/* Adds spacing between elements in the main content section */
-.section__content .section__main:not(.grid) > * + *:not(.card):not(.profile-card) {
-  padding-block-start: var(--s4);
-}
-.section__content .section__main.grid>*+:nth-child(2):not(.card):not(.cards):not(.profile-cards) {
-  padding-block-start: 0;
-}
-.section__content .section__header + .section__main {
-  padding-block-start: var(--s4);
-  margin-block-start: 0
 }
 
 /* Add missing text block spacing for default cards without backgrounds */
